# nl2sql

./: .env.example  .gitignore  .nl2sql_history.json  README.md  pyproject.toml  requirements.txt  streamlit_log.txt
app/agents/: nl2sql_agent.py  prompts.py
app/database/: connection.py  schema_inspector.py
app/ui/: main_content.py  sidebar.py  streamlit_app.py  styles.py
app/utils/: chart_renderer.py  query_history.py
docs/: architecture.md
scripts/: generate_sample_db.py
tests/: test_agent.py
